// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryPanes with custom root renders custom root source list 1`] = `
<Tabs
  activeIndex={1}
  className="sources-panel"
  onActivateTab={[Function]}
>
  <TabList
    activeIndex={0}
    className="source-outline-tabs"
    onActivateTab={[Function]}
    vertical={false}
  >
    <Tab
      active={false}
      className="tab sources-tab"
      key="sources-tab"
    >
      Sources
    </Tab>
    <Tab
      active={false}
      className="tab outline-tab"
      key="outline-tab"
    >
      Outline
    </Tab>
  </TabList>
  <TabPanels
    activeIndex={0}
    className="source-outline-panel has-root"
    hasFocusableContent={true}
  >
    <div
      className="threads-list"
    >
      <div
        className="sources-clear-root-container"
        key="root"
      >
        <button
          className="sources-clear-root"
          onClick={[Function]}
          title="Remove directory root"
        >
          <AccessibleImage
            className="home"
          />
          <AccessibleImage
            className="breadcrumb"
          />
          <span
            className="sources-clear-root-label"
          >
            mdn.com
          </span>
        </button>
      </div>
      <Connect(SourcesTree)
        threads={Array []}
      />
    </div>
    <Connect(Outline)
      alphabetizeOutline={false}
      onAlphabetizeClick={[Function]}
    />
  </TabPanels>
</Tabs>
`;

exports[`PrimaryPanes with custom root renders empty custom root source list 1`] = `
<Tabs
  activeIndex={1}
  className="sources-panel"
  onActivateTab={[Function]}
>
  <TabList
    activeIndex={0}
    className="source-outline-tabs"
    onActivateTab={[Function]}
    vertical={false}
  >
    <Tab
      active={false}
      className="tab sources-tab"
      key="sources-tab"
    >
      Sources
    </Tab>
    <Tab
      active={false}
      className="tab outline-tab"
      key="outline-tab"
    >
      Outline
    </Tab>
  </TabList>
  <TabPanels
    activeIndex={0}
    className="source-outline-panel has-root"
    hasFocusableContent={true}
  >
    <div
      className="threads-list"
    >
      <div
        className="sources-clear-root-container"
        key="root"
      >
        <button
          className="sources-clear-root"
          onClick={[Function]}
          title="Remove directory root"
        >
          <AccessibleImage
            className="home"
          />
          <AccessibleImage
            className="breadcrumb"
          />
          <span
            className="sources-clear-root-label"
          >
            custom
          </span>
        </button>
      </div>
      <Connect(SourcesTree)
        threads={Array []}
      />
    </div>
    <Connect(Outline)
      alphabetizeOutline={false}
      onAlphabetizeClick={[Function]}
    />
  </TabPanels>
</Tabs>
`;
